--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 				<div class="container">
 					<div class="dropdown_inner">
 						<ul>
-							<li><a href="#home">Home</a></li>
+							<li><a href="#home">Trang Chủ</a></li>
 							<li><a href="#about">About</a></li>
 							<li><a href="#services">Services</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
-							<li><a href="#news">News</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li><a href="#news"></a>Tin Tức</li>
+							<li><a href="#contact">Liên Hệ</a></li>
 						</ul>
 					</div>
 				</div>
@@ -87,22 +87,22 @@
 				</div>
 				<div class="menu scrollable">
 					<ul>
-						<li><a href="#home">Home</a></li>
+						<li><a href="#home">Trang Chủ</a></li>
 						<li><a href="#about">About</a></li>
 						<li><a href="#services">Services</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#news">News</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#news">Tin Tức</a></li>
+						<li><a href="#contact">Liên Hệ</a></li>
 					</ul>
 				</div>
 				<div class="bottom">
 					<div class="social">
 						<ul>
-							<li><a href="#"><i class="xcon-facebook"></i></a></li>
-							<li><a href="#"><i class="xcon-twitter"></i></a></li>
-							<li><a href="#"><i class="xcon-linkedin"></i></a></li>
-							<li><a href="#"><i class="xcon-instagram"></i></a></li>
-							<li><a href="#"><i class="xcon-behance"></i></a></li>
+							<li><a href="https://facebook.com/hai.lhz"><i class="xcon-facebook"></i></a></li>
+							<li><a href="https://twitter.com/haivickyy"><i class="xcon-twitter"></i></a></li>
+							<li><a href="https://pinterest.com/haivicky"><i class="xcon-pinterest"></i></a></li>
+							<li><a href="https://instagram.com/hayvickyy"><i class="xcon-instagram"></i></a></li>
+							<li><a href="https://youtube.com/c/haivicky"><i class="xcon-youtube"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -163,24 +163,24 @@
 									</div>
 									<div class="rightbox wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s">
 										<div class="about_title">
-											<h3>I'm Albert Walkers and <span class="arlo_tm_animation_text_word"></span></h3>
+											<h3>I'm Lanh Van Hai and <span class="arlo_tm_animation_text_word"></span></h3>
 										</div>
 										<div class="text">
-											<p>Hi! My name is <span>Albert Walkers</span>. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
+											<p>Hi! My name is <span>Hai</span>. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
 										</div>
 										<div class="about_short_contact_wrap">
 											<ul>
 												<li>
 													<img class="svg" src="img/svg/gift.svg" alt="" />
-													<span><label>Birthday:</label> 01.07.1990</span>
+													<span><label>Birthday:</label> 19-10-1996</span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/calendar.svg" alt="" />
-													<span><label>Age:</label> 29</span>
+													<span><label>Age:</label> 25</span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/placeholder.svg" alt="" />
-													<span><label>Location:</label> <a class="href_location" href="#">Ave 11, New York, USA</a></span>
+													<span><label>Location:</label> <a class="href_location" href="#">Bản Luồng, Tú Mịch, Lộc Bình, Lạng Sơn.</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/console.svg" alt="" />
@@ -188,7 +188,7 @@
 												</li>
 												<li>
 													<img class="svg" src="img/svg/book.svg" alt="" />
-													<span><label>Study:</label> <a class="href_location" href="#"> Univercity of Chicago</a></span>
+													<span><label>Study:</label> <a class="href_location" href="#"> HANOI UNIVERSITY OF INDUSTRY</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/graduation-hat.svg" alt="" />
@@ -196,11 +196,11 @@
 												</li>	
 												<li>
 													<img class="svg" src="img/svg/message.svg" alt="" />
-													<span><label>Mail:</label> <a href="mailto:example@gmail.com">mymail&#64;gmail.com</a></span>
+													<span><label>Mail:</label> <a href="mailto:hailhz196@gmail.com">hailhz196@gmail.com</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/phone-call.svg" alt="" />
-													<span><label>Phone:</label> <a href="tel:+77 022 177 05 05">+77 022 177 05 05</a></span>
+													<span><label>Phone:</label> <a href="tel:+84 037 494 70 41">+84 037 494 70 41</a></span>
 												</li>
 											</ul>
 										</div>
@@ -806,27 +806,27 @@
 											<ul>
 												<li>
 													<img class="svg" src="img/svg/placeholder.svg" alt="" />
-													<span><label>Location:</label><a class="href_location" href="#">11 Ave, New York, USA</a></span>
+													<span><label>Location:</label><a class="href_location" href="#">Bản Luồng, Tú Mịch, Lộc Bình, Lạng Sơn.</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/phone-call.svg" alt="" />
-													<span><label>Phone:</label> <a href="tel:+77 022 177 05 05">+77 022 177 05 05</a></span>
+													<span><label>Phone:</label> <a href="tel:+84 037 494 70 41">+84 037 494 70 41</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/internet.svg" alt="" />
-													<span><label>Website:</label> <a href="https://mydomain.com/" target="_blank">myaddress.com</a></span>
+													<span><label>Website:</label> <a href="https://hảitm.vn/" target="_blank">hảitm.vn</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/twitter.svg" alt="" />
-													<span><label>Twitter:</label> <a href="https://twitter.com/" target="_blank">@mytwitternick</a></span>
+													<span><label>Twitter:</label> <a href="https://twitter.com/haivickyy" target="_blank">@haivickyy</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/facebook.svg" alt="" />
-													<span><label>Facebook:</label> <a href="https://fb.me/@facebooknick" target="_blank">@myfacebooknick</a></span>
+													<span><label>Facebook:</label> <a href="https://fb.me/hai.lhz" target="_blank">@hai.lhz</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/instagram.svg" alt="" />
-													<span><label>Instagram:</label> <a href="https://www.instagram.com/" target="_blank">@myinstagramnick</a></span>
+													<span><label>Instagram:</label> <a href="https://www.instagram.com/haivickyy" target="_blank">@haivickyy</a></span>
 												</li>
 												<li>
 													<img class="svg" src="img/svg/whatsapp.svg" alt="" />
